libqt6c/src/libqsessionmanager.hpp

#pragma once
#ifndef SRCC_LIBQSESSIONMANAGER_HPP
#define SRCC_LIBQSESSIONMANAGER_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSessionManager QSessionManager;
#endif

QMetaObject* QSessionManager_MetaObject(const QSessionManager* self);
void* QSessionManager_Metacast(QSessionManager* self, const char* param1);
int QSessionManager_Metacall(QSessionManager* self, int param1, int param2, void** param3);
libqt_string QSessionManager_SessionId(const QSessionManager* self);
libqt_string QSessionManager_SessionKey(const QSessionManager* self);
bool QSessionManager_AllowsInteraction(QSessionManager* self);
bool QSessionManager_AllowsErrorInteraction(QSessionManager* self);
void QSessionManager_Release(QSessionManager* self);
void QSessionManager_Cancel(QSessionManager* self);
void QSessionManager_SetRestartHint(QSessionManager* self, int restartHint);
int QSessionManager_RestartHint(const QSessionManager* self);
void QSessionManager_SetRestartCommand(QSessionManager* self, const QStringList* restartCommand);
QStringList QSessionManager_RestartCommand(const QSessionManager* self);
void QSessionManager_SetDiscardCommand(QSessionManager* self, const QStringList* discardCommand);
QStringList QSessionManager_DiscardCommand(const QSessionManager* self);
void QSessionManager_SetManagerProperty(QSessionManager* self, const libqt_string name, const libqt_string value);
void QSessionManager_SetManagerProperty2(QSessionManager* self, const libqt_string name, const QStringList* value);
bool QSessionManager_IsPhase2(const QSessionManager* self);
void QSessionManager_RequestPhase2(QSessionManager* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif